--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -52,6 +52,8 @@
 	"block.mubble.jungle_wood_stairs": "Escadas de Madeira de Selva",
 	"block.mubble.acacia_wood_stairs": "Escadas de Madeira de Acácia",
 	"block.mubble.dark_oak_wood_stairs": "Escadas de Madeira de Carvalho Escuro",
+	"//block.mubble.crimson_hyphae_stairs": "Crimson Hyphae Stairs",
+	"//block.mubble.warped_hyphae_stairs": "Warped Hyphae Stairs",
 
 	"block.mubble.oak_wood_slab": "Laje de Madeira de Carvalho",
 	"block.mubble.spruce_wood_slab": "Laje de Madeira de Pinheiro",
@@ -59,6 +61,8 @@
 	"block.mubble.jungle_wood_slab": "Laje de Madeira de Selva",
 	"block.mubble.acacia_wood_slab": "Laje de Madeira de Acácia",
 	"block.mubble.dark_oak_wood_slab": "Laje de Madeira de Carvalho Escuro",
+	"//block.mubble.crimson_hyphae_slab": "Crimson Hyphae Slab",
+	"//block.mubble.warped_hyphae_slab": "Warped Hyphae Slab",
 
 	"block.mubble.oak_wood_vertical_slab": "Laje Vertical de Madeira de Carvalho",
 	"block.mubble.spruce_wood_vertical_slab": "Laje Vertical de Madeira de Pinheiro",
@@ -66,6 +70,8 @@
 	"block.mubble.jungle_wood_vertical_slab": "Laje Vertical de Madeira de Selva",
 	"block.mubble.acacia_wood_vertical_slab": "Laje Vertical de Madeira de Acácia",
 	"block.mubble.dark_oak_wood_vertical_slab": "Laje Vertical de Madeira de Carvalho Escuro",
+	"//block.mubble.crimson_hyphae_vertical_slab": "Crimson Hyphae Vertical Slab",
+	"//block.mubble.warped_hyphae_vertical_slab": "Warped Hyphae Vertical Slab",
 
 	"block.mubble.oak_wood_button": "Botão de Madeira de Carvalho",
 	"block.mubble.spruce_wood_button": "Botão de Madeira de Pinheiro",
@@ -73,6 +79,8 @@
 	"block.mubble.jungle_wood_button": "Botão de Madeira de Selva",
 	"block.mubble.acacia_wood_button": "Botão de Madeira de Acácia",
 	"block.mubble.dark_oak_wood_button": "Botão de Madeira de Carvalho Escuro",
+	"//block.mubble.crimson_hyphae_button": "Crimson Hyphae Button",
+	"//block.mubble.warped_hyphae_button": "Warped Hyphae Button",
 
 	"block.mubble.oak_leaf_pile": "Pilha de Folhas de Carvalho",
 	"block.mubble.spruce_leaf_pile": "Pilha de Folhas de Pinheiro",
