--- a/src/main/resources/assets/mubble/lang/lol_us.json
+++ b/src/main/resources/assets/mubble/lang/lol_us.json
@@ -1309,6 +1309,12 @@
 	"advancements.mubble.get_tetris_block.title": "falin in th sky",
 	"advancements.mubble.get_tetris_block.description": "tirtris bloks fun",
 
+	"comment": "STATS",
+	"//stat.mubble.inspect_placer": "Placers Searched",
+	"//stat.mubble.interact_with_timeswap_table": "Interactions with Timeswap Table",
+	"//stat.mubble.open_present": "Presents Opened",
+	"//stat.mubble.talked_to_toad": "Talked to Toads",
+
 	"comment": "COMMANDS",
 	"//commands.foodbar.add.food.success.single": "Gave %s food points to %s",
 	"//commands.foodbar.add.food.success.multiple": "Gave %s food points to %s entities",
