--- a/src/main/resources/assets/mubble/lang/pt_br.json
+++ b/src/main/resources/assets/mubble/lang/pt_br.json
@@ -1309,6 +1309,12 @@
 	"advancements.mubble.get_tetris_block.title": "Está Tudo Conectado",
 	"advancements.mubble.get_tetris_block.description": "Definiu em sua mão um Bloco de Tetris",
 
+	"comment": "STATS",
+	"//stat.mubble.inspect_placer": "Placers Searched",
+	"//stat.mubble.interact_with_timeswap_table": "Interactions with Timeswap Table",
+	"//stat.mubble.open_present": "Presents Opened",
+	"//stat.mubble.talked_to_toad": "Talked to Toads",
+
 	"comment": "COMMANDS",
 	"commands.foodbar.add.food.success.single": "Deu %s pontos de comida para %s",
 	"commands.foodbar.add.food.success.multiple": "Deu %s pontos de comida para %s entidades",
