Added missing translation strings

--- a/src/main/resources/assets/mubble/lang/en_us.json
+++ b/src/main/resources/assets/mubble/lang/en_us.json
@@ -775,6 +775,30 @@
 	"block.mubble.permafrost_bismuth_ore": "Permafrost Bismuth Ore",
 	"block.mubble.frozen_obsidian": "Frozen Obsidian",
 
+	"block.mubble.amaranth_dylium": "Amaranth Dylium",
+	"block.mubble.amaranth_roots": "Amaranth Roots",
+	"block.mubble.amaranth_wart_block": "Amaranth Wart Block",
+
+	"block.mubble.dark_amaranth_planks": "Dark Amaranth Planks",
+	"block.mubble.dark_amaranth_fungus": "Dark Amaranth Fungus",
+	"block.mubble.dark_amaranth_stem": "Dark Amaranth Stem",
+	"block.mubble.stripped_dark_amaranth_stem": "Stripped Dark Amaranth Stem",
+	"block.mubble.dark_amaranth_hyphae": "Dark Amaranth Hyphae",
+	"block.mubble.stripped_dark_amaranth_hyphae": "Stripped Dark Amaranth Hyphae",
+	"block.mubble.dark_amaranth_pressure_plate": "Dark Amaranth Pressure Plate",
+	"block.mubble.dark_amaranth_trapdoor": "Dark Amaranth Trapdoor",
+	"block.mubble.dark_amaranth_button": "Dark Amaranth Button",
+	"block.mubble.dark_amaranth_stairs": "Dark Amaranth Stairs",
+	"block.mubble.dark_amaranth_slab": "Dark Amaranth Slab",
+	"block.mubble.dark_amaranth_vertical_slab": "Dark Amaranth Vertical Slab",
+	"block.mubble.dark_amaranth_fence_gate": "Dark Amaranth Fence Gate",
+	"block.mubble.dark_amaranth_fence": "Dark Amaranth Fence",
+	"block.mubble.dark_amaranth_door": "Dark Amaranth Door",
+	"block.mubble.dark_amaranth_hyphae_stairs": "Dark Amaranth Hyphae Stairs",
+	"block.mubble.dark_amaranth_hyphae_slab": "Dark Amaranth Hyphae Slab",
+	"block.mubble.dark_amaranth_hyphae_vertical_slab": "Dark Amaranth Hyphae Vertical Slab",
+	"block.mubble.dark_amaranth_hyphae_button": "Dark Amaranth Hyphae Button",
+
 	"block.mubble.smb_question_block": "? Block (SMB)",
 	"block.mubble.smb3_question_block": "? Block (SMB3)",
 	"block.mubble.smw_question_block": "? Block (SMW)",
