Tweaks to Toads and started working on trades themselves

--- a/src/main/resources/assets/mubble/lang/es_es.json
+++ b/src/main/resources/assets/mubble/lang/es_es.json
@@ -1259,6 +1259,29 @@
 	"entity.mubble.chincho": "Chincho",
 	"//entity.mubble.goomba": "Goomba",
 	"entity.mubble.toad": "Toad",
+	"//entity.mubble.toad.species.white": "White Toad",
+	"//entity.mubble.toad.species.light_gray": "Light Gray Toad",
+	"//entity.mubble.toad.species.gray": "Gray Toad",
+	"//entity.mubble.toad.species.black": "Black Toad",
+	"//entity.mubble.toad.species.brown": "Brown Toad",
+	"//entity.mubble.toad.species.red": "Red Toad",
+	"//entity.mubble.toad.species.orange": "Orange Toad",
+	"//entity.mubble.toad.species.yellow": "Yellow Toad",
+	"//entity.mubble.toad.species.lime": "Lime Toad",
+	"//entity.mubble.toad.species.green": "Green Toad",
+	"//entity.mubble.toad.species.cyan": "Cyan Toad",
+	"//entity.mubble.toad.species.light_blue": "Ligh Blue Toad",
+	"//entity.mubble.toad.species.blue": "Blue Toad",
+	"//entity.mubble.toad.species.purple": "Purple Toad",
+	"//entity.mubble.toad.species.magenta": "Magenta Toad",
+	"//entity.mubble.toad.species.pink": "Pink Toad",
+	"//entity.mubble.toad.brigade.captain_toad": "Captain Toad",
+	"//entity.mubble.toad.brigade.hint_toad": "Hint Toad",
+	"//entity.mubble.toad.brigade.banktoad": "Banktoad",
+	"//entity.mubble.toad.brigade.yellow": "Yellow Toad",
+	"//entity.mubble.toad.brigade.mailtoad": "Mailtoad",
+	"//entity.mubble.toad.party": "Party Toad",
+	"//entity.mubble.toad.kisekae": "Kisekae Toad",
 	"//entity.mubble.fireball": "Fireball",
 	"//entity.mubble.iceball": "Iceball",
 	"//entity.mubble.kirby_ball": "Kirby Ball",
