Added dark amaranths biomes translation strings

--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -1299,6 +1299,8 @@
 	"biome.mubble.tritanopian_gallery": "Tritanopian Gallery",
 	"biome.mubble.achromatopsian_gallery": "Achromatopsian Gallery",
 	"biome.mubble.protanopian_gallery": "Protanopian Gallery",
+	"//biome.mubble.dark_amaranth_forest": "Dark Amaranth Forest",
+	"//biome.mubble.tall_dark_amaranth_forest": "Tall Dark Amaranth Forest",
 	"biome.mubble.press_garden": "Press Garden",
 	"biome.mubble.scarlet_forest": "Scarlet Forest",
 
