--- a/src/main/resources/assets/mubble/lang/fr_fr.json
+++ b/src/main/resources/assets/mubble/lang/fr_fr.json
@@ -1299,6 +1299,8 @@
 	"biome.mubble.tritanopian_gallery": "Galerie tritanopienne",
 	"biome.mubble.achromatopsian_gallery": "Galerie achromatopsienne",
 	"biome.mubble.protanopian_gallery": "Galerie protanopienne",
+	"//biome.mubble.dark_amaranth_forest": "Dark Amaranth Forest",
+	"//biome.mubble.tall_dark_amaranth_forest": "Tall Dark Amaranth Forest",
 	"biome.mubble.press_garden": "Jardin de presse",
 	"biome.mubble.scarlet_forest": "Forêt écarlate",
 
