--- a/src/main/resources/assets/mubble/lang/nl_nl.json
+++ b/src/main/resources/assets/mubble/lang/nl_nl.json
@@ -1299,6 +1299,8 @@
 	"biome.mubble.tritanopian_gallery": "Tritanopische galerij",
 	"biome.mubble.achromatopsian_gallery": "Achromatopsian galerij",
 	"biome.mubble.protanopian_gallery": "Protanopishe galerij",
+	"//biome.mubble.dark_amaranth_forest": "Dark Amaranth Forest",
+	"//biome.mubble.tall_dark_amaranth_forest": "Tall Dark Amaranth Forest",
 	"biome.mubble.press_garden": "Perstuin",
 	"biome.mubble.scarlet_forest": "Scharlake bos",
 
